fixed Smith alignment problems

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -516,6 +516,22 @@ footer ul li {
       font-weight:bold;
       }
 
+
+  /* Smith Formatting */
+
+
+  #smith_left {
+    float: left;
+    padding-bottom: 5px;
+    padding-top: 5px;
+  }
+
+  #smith_left img {
+      height: auto;
+      margin-right: 20px;
+      width: 120px;
+  }
+
   /* Link Image classes */
 
 
